--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,145 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* --------------- BASE HEADER / FOOTER STYLES --------------- */
+
+header, 
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/* Header styles */
+
+header .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header nav ul {
+  display: flex;
+  justify-content: space-around;
+}
+
+/* Footer styles */
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* --------------- MOBILE STYLES - HOMEPAGE --------------- */
+
+/* Hero Area */
+
+.hero-area {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+/* Aside */
+
+aside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/* Features */
+
+.features {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+.features .features-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/* Reviews */
+
+.reviews {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+
+/* --------------- MOBILE STYLES - ABOUT --------------- */
+
+/* Mission */
+
+.mission {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/* Contact */
+
+.contact-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/* --------------- MOBILE STYLES - FAQ --------------- */
+
+.faq {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.faq-content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/* --------------- TABLET STYLES - HOMEPAGE --------------- */
+
+/* --------------- TABLET STYLES - ABOUT --------------- */
+
+/* --------------- TABLET STYLES - FAQ --------------- */
+
+/* --------------- DESKTOP STYLES - HOMEPAGE --------------- */
+
+/* --------------- DESKTOP STYLES - ABOUT --------------- */
+
+/* --------------- DESKTOP STYLES - FAQ --------------- */
+
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
