--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,10 @@ ul,
 ol {
   list-style-type: none;
 }
+
+ul {
+  padding: 0;
+}
  
 a {
   color: #e2e3ed;
@@ -125,6 +129,7 @@ h2 {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 1.875em;
+  margin: 0;
 }
  
 h3, 
@@ -289,6 +294,15 @@ aside {
   flex-flow: row wrap;
 }
 
+aside .content-wrapper {
+  margin: 0;
+  margin-bottom: 40px;
+}
+
+aside p {
+  width: 90%;
+}
+
 aside .form{
   margin-top: 30px;
 }
@@ -327,7 +341,7 @@ input[type=button] {
 }
 
 .features h2 {
-  margin-bottom: 60px;
+  margin-bottom: 30px;
 }
 
 .features article {
@@ -364,6 +378,7 @@ input[type=button] {
 .reviews h2 {
   margin-bottom: 40px;
   line-height: 1;
+  width: 85%;
 }
 
 .reviews h3 {
@@ -437,7 +452,7 @@ input[type=button] {
 }
 
 .faq-content {
-  margin-bottom: 50px;
+  margin-bottom: 25px;
 }
 
 .faq-content h4 {
@@ -592,7 +607,7 @@ input[type=button] {
 
   /* Aside */
   aside .content-wrapper {
-    margin: 50px 0;
+    margin: 40px 0;
     display: flex;
     justify-content: space-between;
     flex-flow: row wrap;
@@ -600,8 +615,12 @@ input[type=button] {
 
   aside .content-wrapper .form-description,
   aside .content-wrapper .form {
-    width: 40%;
+    width: 50%;
     margin: 0;
+  }
+
+  .form-description p {
+    width: 80%;
   }
 
   /* Features */
@@ -715,6 +734,7 @@ input[type=button] {
 
   .faq .content-wrapper {
     justify-content: space-between;
+    margin: 60px 0 30px 0;
   }
 
   .faq-content {
@@ -770,7 +790,7 @@ input[type=button] {
 
   aside .content-wrapper .form-description,
   aside .content-wrapper .form {
-    width: 30%;
+    width: 40%;
   }
 
   .form-description p {
@@ -831,6 +851,11 @@ input[type=button] {
   .faq p {
       font-size: 1.125em;
       line-height: 1;
+  }
+
+  .faq .content-wrapper {
+    justify-content: space-between;
+    margin: 75px 0 75px 0;
   }
 }
 
